# PLCProject

./: CMakeLists.txt  README.md  camerahandler.cpp  camerahandler.h  hikvisonhandler.cpp  hikvisonhandler.h  hikvisonhandlercstyelfuncs.cpp  hikvisonhandlercstyelfuncs.h  hkvsplayer.cpp  hkvsplayer.h  imagesender.cpp  imagesender.h  main.cpp  mainwindow.cpp  mainwindow.h  newdatachecker.cpp  newdatachecker.h  preveiwwidget.cpp  preveiwwidget.h  putstreamdatethread.cpp  putstreamdatethread.h
